Update du montant d'un deal

--- a/main.ipynb
+++ b/main.ipynb
@@ -26,10 +26,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Récupération des informations"
+    "# Valeur totale des deals avec et sans pondération"
    ]
   },
   {
@@ -269,6 +270,11 @@
     "company_data=company.to_dict()\n",
     "company_data[\"properties\"]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
