Calcul du nombre de points contact en poste

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# token\n",
+    "token=\"pat-eu1-52e0d25c-7a77-4128-bf28-4787e96528bf\"\n",
     "\n",
     "\n",
     "# Bibliothèques\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'createdate': '2023-04-28T09:53:40.624Z',\n",
-       " 'hs_lastmodifieddate': '2023-04-28T16:16:00.736Z',\n",
+       " 'hs_lastmodifieddate': '2023-04-30T01:39:28.980Z',\n",
        " 'hs_object_id': '7496989169',\n",
        " 'hs_predictivecontactscore_v2': '3.6',\n",
-       " 'valeur_totale_des_deals': '0',\n",
-       " 'valeur_totale_des_deals_ponderee': '0'}"
+       " 'nombre_de_points_de_contacts_en_poste': None,\n",
+       " 'valeur_totale_des_deals': '405498.0',\n",
+       " 'valeur_totale_des_deals_ponderee': '197168.2'}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +69,7 @@
     "# api_client.crm.properties.core_api.get_all(object_type=\"companies\")\n",
     "\n",
     "# properties=[\"name\",\"city\",\"country\",\"industry\",\"hs_analytics_num_visits\",\"hs_annual_revenue_currency_code\",\"total_money_raised\",\"total_revenue\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"owneremail\",\"numberofemployees\",\"hs_total_deal_value\",\"total_money_raised\",\"hs_predictivecontactscore_v2\",\"hs_target_account_probability\",\"hs_predictivecontactscore_v2_next_max_max_d4e58c1e\",\"num_associated_contacts\",\"num_conversion_events\",\"num_conversion_events_cardinality_sum_d095f14b\"]\n",
-    "properties_needed=[\"hs_predictivecontactscore_v2\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\"]\n",
+    "properties_needed=[\"hs_predictivecontactscore_v2\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"nombre_de_points_de_contacts_en_poste\"]\n",
     "company=api_client.crm.companies.basic_api.get_by_id(id,properties=properties_needed)\n",
     "company_data=company.to_dict()\n",
     "company_data[\"properties\"]"
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
        "['7280660186', '7280697021', '7280697041']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -189,8 +190,141 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update du montant d'un deal\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deal_id=\"\"\n",
+    "# new_amount= 0\n",
+    "# update_montant_deal = SimplePublicObjectInput(\n",
+    "#         properties={\"amount\":new_amount})\n",
+    "# api_client.crm.companies.basic_api.update(simple_public_object_input=update_montant_deal,company_id=deal_id)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contact"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Récupération des informations d'un contact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'createdate': '2023-04-28T09:39:35.628Z',\n",
+       " 'en_poste': 'Oui',\n",
+       " 'firstname': 'Maria',\n",
+       " 'hs_content_membership_email': None,\n",
+       " 'hs_object_id': '1',\n",
+       " 'lastmodifieddate': '2023-04-29T11:10:44.999Z',\n",
+       " 'lastname': 'Johnson (Sample Contact)'}"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Récupération de toute les propriété d'un contact\n",
+    "# api_client.crm.properties.core_api.get_all(object_type=\"contacts\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Somme des contact en poste\n",
+    "\n",
+    "# Mise à jour des infos de l'entreprise\n",
+    "\n",
+    "properties=[\"firstname\",\"lastname\",\"hs_content_membership_email\",\"en_poste\"]\n",
+    "contact=api_client.crm.contacts.basic_api.get_by_id(1,properties=properties)\n",
+    "contact_data=contact.to_dict()\n",
+    "contact_data[\"properties\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Récupération des id des contacts\n",
+    "contacts_id=[]\n",
+    "contacts=api_client.crm.contacts.get_all()\n",
+    "for contact in contacts:\n",
+    "    contacts_id.append(contact.to_dict()[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Récupération de tous les contacts dont En poste = Oui\n",
+    "cpt_en_poste=0\n",
+    "for id in contacts_id:\n",
+    "    contact=api_client.crm.contacts.basic_api.get_by_id(id,properties=[\"en_poste\"])\n",
+    "    contact_data=contact.to_dict()\n",
+    "    if contact_data[\"properties\"][\"en_poste\"] == \"Oui\":\n",
+    "        cpt_en_poste+=1\n",
+    "cpt_en_poste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Propriétaire actuel"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mise à jour des infos de l'entreprise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +337,7 @@
        " 'properties': {'createdate': '2023-04-28T09:53:40.624Z',\n",
        "                'hs_all_owner_ids': '911942887',\n",
        "                'hs_created_by_user_id': '51189390',\n",
-       "                'hs_lastmodifieddate': '2023-04-30T01:39:28.980Z',\n",
+       "                'hs_lastmodifieddate': '2023-04-30T12:48:06.981Z',\n",
        "                'hs_object_id': '7496989169',\n",
        "                'hs_pipeline': 'companies-lifecycle-pipeline',\n",
        "                'hs_updated_by_user_id': '51189390',\n",
@@ -211,13 +345,14 @@
        "                'hubspot_owner_assigneddate': '2023-04-28T09:53:40.624Z',\n",
        "                'hubspot_owner_id': '911942887',\n",
        "                'lifecyclestage': 'opportunity',\n",
+       "                'nombre_de_points_de_contacts_en_poste': '8',\n",
        "                'valeur_totale_des_deals': '405498.0',\n",
        "                'valeur_totale_des_deals_ponderee': '197168.2'},\n",
        " 'properties_with_history': None,\n",
-       " 'updated_at': datetime.datetime(2023, 4, 30, 1, 39, 28, 980000, tzinfo=tzutc())}"
+       " 'updated_at': datetime.datetime(2023, 4, 30, 12, 48, 6, 981000, tzinfo=tzutc())}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,16 +360,17 @@
    "source": [
     "# Mise à jour des infos de l'entreprise\n",
     "comp_id=\"7496989169\"\n",
-    "update_valeurs_deals = SimplePublicObjectInput(\n",
+    "update_montant_tot_deals = SimplePublicObjectInput(\n",
     "        properties={\n",
     "                \"valeur_totale_des_deals\":montant_deals ,\n",
-    "                    \"valeur_totale_des_deals_ponderee\":montant_deals_pond})\n",
-    "api_client.crm.companies.basic_api.update(simple_public_object_input=update_valeurs_deals,company_id=\"7496989169\")"
+    "                \"valeur_totale_des_deals_ponderee\":montant_deals_pond,\n",
+    "                \"nombre_de_points_de_contacts_en_poste\": cpt_en_poste})\n",
+    "api_client.crm.companies.basic_api.update(simple_public_object_input=update_montant_tot_deals,company_id=\"7496989169\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -243,17 +379,18 @@
        "{'city': 'Grenoble',\n",
        " 'country': 'France',\n",
        " 'createdate': '2023-04-28T09:53:40.624Z',\n",
-       " 'hs_lastmodifieddate': '2023-04-30T01:39:28.980Z',\n",
+       " 'hs_lastmodifieddate': '2023-04-30T12:48:06.981Z',\n",
        " 'hs_object_id': '7496989169',\n",
        " 'industry': 'INFORMATION_TECHNOLOGY_AND_SERVICES',\n",
        " 'name': 'company',\n",
+       " 'nombre_de_points_de_contacts_en_poste': '8',\n",
        " 'num_associated_deals': '3',\n",
        " 'numberofemployees': '20',\n",
        " 'valeur_totale_des_deals': '405498.0',\n",
        " 'valeur_totale_des_deals_ponderee': '197168.2'}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,15 +402,17 @@
     "# api_client.crm.properties.core_api.get_all(object_type=\"companies\")\n",
     "\n",
     "# properties=[\"name\",\"city\",\"country\",\"industry\",\"hs_analytics_num_visits\",\"hs_annual_revenue_currency_code\",\"total_money_raised\",\"total_revenue\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"owneremail\",\"numberofemployees\",\"hs_total_deal_value\",\"total_money_raised\",\"hs_predictivecontactscore_v2\",\"hs_target_account_probability\",\"hs_predictivecontactscore_v2_next_max_max_d4e58c1e\",\"num_associated_contacts\",\"num_conversion_events\",\"num_conversion_events_cardinality_sum_d095f14b,\"num_associated_deals\"]\n",
-    "properties_needed=[\"name\",\"city\",\"country\",\"industry\",\"numberofemployees\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"num_associated_deals\"]\n",
+    "properties_needed=[\"name\",\"city\",\"country\",\"industry\",\"numberofemployees\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"num_associated_deals\",\"nombre_de_points_de_contacts_en_poste\",\"nombre_de_points_de_contacts_en_poste\"]\n",
     "company=api_client.crm.companies.basic_api.get_by_id(id,properties=properties_needed)\n",
     "company_data=company.to_dict()\n",
     "company_data[\"properties\"]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
