--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'createdate': '2023-04-28T09:53:40.624Z',\n",
-       " 'hs_lastmodifieddate': '2023-04-30T01:39:28.980Z',\n",
+       " 'hs_lastmodifieddate': '2023-04-30T13:19:47.041Z',\n",
        " 'hs_object_id': '7496989169',\n",
        " 'hs_predictivecontactscore_v2': '3.6',\n",
-       " 'nombre_de_points_de_contacts_en_poste': None,\n",
+       " 'hubspot_owner_id': '919776484',\n",
+       " 'nombre_de_points_de_contacts_en_poste': '8',\n",
        " 'valeur_totale_des_deals': '405498.0',\n",
        " 'valeur_totale_des_deals_ponderee': '197168.2'}"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +70,7 @@
     "# api_client.crm.properties.core_api.get_all(object_type=\"companies\")\n",
     "\n",
     "# properties=[\"name\",\"city\",\"country\",\"industry\",\"hs_analytics_num_visits\",\"hs_annual_revenue_currency_code\",\"total_money_raised\",\"total_revenue\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"owneremail\",\"numberofemployees\",\"hs_total_deal_value\",\"total_money_raised\",\"hs_predictivecontactscore_v2\",\"hs_target_account_probability\",\"hs_predictivecontactscore_v2_next_max_max_d4e58c1e\",\"num_associated_contacts\",\"num_conversion_events\",\"num_conversion_events_cardinality_sum_d095f14b\"]\n",
-    "properties_needed=[\"hs_predictivecontactscore_v2\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"nombre_de_points_de_contacts_en_poste\"]\n",
+    "properties_needed=[\"hs_predictivecontactscore_v2\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"nombre_de_points_de_contacts_en_poste\",\"hubspot_owner_id\"]\n",
     "company=api_client.crm.companies.basic_api.get_by_id(id,properties=properties_needed)\n",
     "company_data=company.to_dict()\n",
     "company_data[\"properties\"]"
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
        "['7280660186', '7280697021', '7280697041']"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -168,25 +169,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "197168.2\n"
+     "ename": "KeyError",
+     "evalue": "'amount'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[248], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m         montant_deals_pond\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39mfloat\u001b[39m(deal_data[\u001b[39m\"\u001b[39m\u001b[39mproperties\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mamount\u001b[39m\u001b[39m\"\u001b[39m]) \u001b[39m*\u001b[39m \u001b[39mfloat\u001b[39m(deal_data[\u001b[39m\"\u001b[39m\u001b[39mproperties\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mhs_deal_stage_probability\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m     17\u001b[0m     \u001b[39mreturn\u001b[39;00m montant_deals_pond\n\u001b[0;32m---> 19\u001b[0m total_deal_value_weighted()\n",
+      "Cell \u001b[0;32mIn[248], line 16\u001b[0m, in \u001b[0;36mtotal_deal_value_weighted\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m     deal\u001b[39m=\u001b[39mapi_client\u001b[39m.\u001b[39mcrm\u001b[39m.\u001b[39mdeals\u001b[39m.\u001b[39mbasic_api\u001b[39m.\u001b[39mget_by_id(\u001b[39mid\u001b[39m,properties\u001b[39m=\u001b[39mproperties_needed)\n\u001b[1;32m     15\u001b[0m     deal_data\u001b[39m=\u001b[39mdeal\u001b[39m.\u001b[39mto_dict()\n\u001b[0;32m---> 16\u001b[0m     montant_deals_pond\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39mfloat\u001b[39m(deal_data[\u001b[39m\"\u001b[39;49m\u001b[39mproperties\u001b[39;49m\u001b[39m\"\u001b[39;49m][\u001b[39m\"\u001b[39;49m\u001b[39mamount\u001b[39;49m\u001b[39m\"\u001b[39;49m]) \u001b[39m*\u001b[39m \u001b[39mfloat\u001b[39m(deal_data[\u001b[39m\"\u001b[39m\u001b[39mproperties\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mhs_deal_stage_probability\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m     17\u001b[0m \u001b[39mreturn\u001b[39;00m montant_deals_pond\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'amount'"
      ]
     }
    ],
    "source": [
-    "# Récupération du montant total des deals avec pondération\n",
-    "montant_deals_pond=0\n",
-    "for id in deals_id:\n",
-    "    deal=api_client.crm.deals.basic_api.get_by_id(id,properties=properties_needed)\n",
-    "    deal_data=deal.to_dict()\n",
-    "    montant_deals_pond+=float(deal_data[\"properties\"][\"amount\"]) * float(deal_data[\"properties\"][\"hs_deal_stage_probability\"])\n",
-    "print(montant_deals_pond)"
+    "# Calcul du montant total des deals avec pondération\n",
+    "\n",
+    "def total_deal_value_weighted(properties):\n",
+    "\n",
+    "    # Recupération des ids des deals (si on considère que tous les deals sont associés à une seule entreprise)\n",
+    "    deals_id=[]\n",
+    "    deals=api_client.crm.deals.get_all()\n",
+    "    for deal in deals:\n",
+    "        deals_id.append(deal.to_dict()[\"id\"])\n",
+    "    \n",
+    "    # Calcul du montant total des deals avec pondération\n",
+    "    montant_deals_pond=0\n",
+    "    for id in deals_id:\n",
+    "        deal=api_client.crm.deals.basic_api.get_by_id(id,properties=properties_needed)\n",
+    "        deal_data=deal.to_dict()\n",
+    "        montant_deals_pond+=float(deal_data[\"properties\"][\"amount\"]) * float(deal_data[\"properties\"][\"hs_deal_stage_probability\"])\n",
+    "    return montant_deals_pond\n",
+    "\n",
+    "total_deal_value_weighted()\n"
    ]
   },
   {
@@ -199,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,72 +233,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Contact"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Récupération des informations d'un contact"
+    "# Contacts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'createdate': '2023-04-28T09:39:35.628Z',\n",
-       " 'en_poste': 'Oui',\n",
-       " 'firstname': 'Maria',\n",
-       " 'hs_content_membership_email': None,\n",
-       " 'hs_object_id': '1',\n",
-       " 'lastmodifieddate': '2023-04-29T11:10:44.999Z',\n",
-       " 'lastname': 'Johnson (Sample Contact)'}"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Récupération de toute les propriété d'un contact\n",
-    "# api_client.crm.properties.core_api.get_all(object_type=\"contacts\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Somme des contact en poste\n",
-    "\n",
-    "# Mise à jour des infos de l'entreprise\n",
-    "\n",
-    "properties=[\"firstname\",\"lastname\",\"hs_content_membership_email\",\"en_poste\"]\n",
-    "contact=api_client.crm.contacts.basic_api.get_by_id(1,properties=properties)\n",
-    "contact_data=contact.to_dict()\n",
-    "contact_data[\"properties\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Récupération des id des contacts\n",
-    "contacts_id=[]\n",
-    "contacts=api_client.crm.contacts.get_all()\n",
-    "for contact in contacts:\n",
-    "    contacts_id.append(contact.to_dict()[\"id\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -289,29 +247,45 @@
        "8"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Récupération de tous les contacts dont En poste = Oui\n",
-    "cpt_en_poste=0\n",
-    "for id in contacts_id:\n",
-    "    contact=api_client.crm.contacts.basic_api.get_by_id(id,properties=[\"en_poste\"])\n",
-    "    contact_data=contact.to_dict()\n",
-    "    if contact_data[\"properties\"][\"en_poste\"] == \"Oui\":\n",
-    "        cpt_en_poste+=1\n",
-    "cpt_en_poste"
+    "# Calcul du nombre de contacts dont En poste = Oui\n",
+    "\n",
+    "def count_en_poste(etat=\"Oui\"):\n",
+    "\n",
+    "    # Récupération des id des contacts\n",
+    "    contacts_id=[]\n",
+    "    contacts=api_client.crm.contacts.get_all()\n",
+    "    for contact in contacts:\n",
+    "        contacts_id.append(contact.to_dict()[\"id\"])\n",
+    "\n",
+    "    # Calcul du nombre de contact selon l'état de l'attribut en poste\n",
+    "    cpt_en_poste=0\n",
+    "    for id in contacts_id:\n",
+    "        contact_data=api_client.crm.contacts.basic_api.get_by_id(id,properties=[\"en_poste\"]).to_dict()\n",
+    "        if contact_data[\"properties\"][\"en_poste\"] == etat:\n",
+    "            cpt_en_poste+=1\n",
+    "    return cpt_en_poste\n",
+    "count_en_poste()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Propriétaire actuel"
+    "# Propriétaire actuel\n",
+    "\n",
+    "def update_owner():\n",
+    "    owner_id=api_client.crm.companies.basic_api.get_by_id(id,properties=[\"hubspot_owner_id\"]).to_dict()\n",
+    "    owner_id=owner_id[\"properties\"][\"hubspot_owner_id\"]\n",
+    "    owner_data=api_client.crm.owners.owners_api.get_by_id(owner_id).to_dict()\n",
+    "    return [[\"first_name\"],[\"last_name\"]]"
    ]
   },
   {
@@ -324,53 +298,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'archived': False,\n",
-       " 'archived_at': None,\n",
-       " 'created_at': datetime.datetime(2023, 4, 28, 9, 53, 40, 624000, tzinfo=tzutc()),\n",
-       " 'id': '7496989169',\n",
-       " 'properties': {'createdate': '2023-04-28T09:53:40.624Z',\n",
-       "                'hs_all_owner_ids': '911942887',\n",
-       "                'hs_created_by_user_id': '51189390',\n",
-       "                'hs_lastmodifieddate': '2023-04-30T12:48:06.981Z',\n",
-       "                'hs_object_id': '7496989169',\n",
-       "                'hs_pipeline': 'companies-lifecycle-pipeline',\n",
-       "                'hs_updated_by_user_id': '51189390',\n",
-       "                'hs_user_ids_of_all_owners': '51189390',\n",
-       "                'hubspot_owner_assigneddate': '2023-04-28T09:53:40.624Z',\n",
-       "                'hubspot_owner_id': '911942887',\n",
-       "                'lifecyclestage': 'opportunity',\n",
-       "                'nombre_de_points_de_contacts_en_poste': '8',\n",
-       "                'valeur_totale_des_deals': '405498.0',\n",
-       "                'valeur_totale_des_deals_ponderee': '197168.2'},\n",
-       " 'properties_with_history': None,\n",
-       " 'updated_at': datetime.datetime(2023, 4, 30, 12, 48, 6, 981000, tzinfo=tzutc())}"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "company updated\n"
+     ]
     }
    ],
    "source": [
     "# Mise à jour des infos de l'entreprise\n",
     "comp_id=\"7496989169\"\n",
-    "update_montant_tot_deals = SimplePublicObjectInput(\n",
-    "        properties={\n",
+    "properties={\n",
     "                \"valeur_totale_des_deals\":montant_deals ,\n",
     "                \"valeur_totale_des_deals_ponderee\":montant_deals_pond,\n",
-    "                \"nombre_de_points_de_contacts_en_poste\": cpt_en_poste})\n",
-    "api_client.crm.companies.basic_api.update(simple_public_object_input=update_montant_tot_deals,company_id=\"7496989169\")"
+    "                \"nombre_de_points_de_contacts_en_poste\": count_en_poste(),\n",
+    "                \"nom_du_dirigeant\":update_owner()[1],\n",
+    "                \"prenom_du_dirigeant\":update_owner()[2]}\n",
+    "def update_company(comp_id,properties):\n",
+    "        try:\n",
+    "                update_montant_tot_deals = SimplePublicObjectInput(properties=properties)\n",
+    "                api_client.crm.companies.basic_api.update(simple_public_object_input=update_montant_tot_deals,company_id=comp_id)\n",
+    "                return print(\"company updated\")\n",
+    "        except ApiException as update:\n",
+    "                return print(\"Exception when updating company: %s\\n\" % update)\n",
+    "update_company(comp_id,properties)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -379,34 +340,41 @@
        "{'city': 'Grenoble',\n",
        " 'country': 'France',\n",
        " 'createdate': '2023-04-28T09:53:40.624Z',\n",
-       " 'hs_lastmodifieddate': '2023-04-30T12:48:06.981Z',\n",
+       " 'hs_lastmodifieddate': '2023-04-30T14:20:50.150Z',\n",
        " 'hs_object_id': '7496989169',\n",
        " 'industry': 'INFORMATION_TECHNOLOGY_AND_SERVICES',\n",
        " 'name': 'company',\n",
+       " 'nom_du_dirigeant': 'company',\n",
        " 'nombre_de_points_de_contacts_en_poste': '8',\n",
        " 'num_associated_deals': '3',\n",
        " 'numberofemployees': '20',\n",
+       " 'prenom_du_dirigeant': 'owner',\n",
        " 'valeur_totale_des_deals': '405498.0',\n",
        " 'valeur_totale_des_deals_ponderee': '197168.2'}"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Récupération des infos après update\n",
-    "id=7496989169\n",
-    "# Récupération de toute les propriété d'une entreprise\n",
-    "# api_client.crm.properties.core_api.get_all(object_type=\"companies\")\n",
+    "# Récupération des infos de l'entreprise\n",
     "\n",
-    "# properties=[\"name\",\"city\",\"country\",\"industry\",\"hs_analytics_num_visits\",\"hs_annual_revenue_currency_code\",\"total_money_raised\",\"total_revenue\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"owneremail\",\"numberofemployees\",\"hs_total_deal_value\",\"total_money_raised\",\"hs_predictivecontactscore_v2\",\"hs_target_account_probability\",\"hs_predictivecontactscore_v2_next_max_max_d4e58c1e\",\"num_associated_contacts\",\"num_conversion_events\",\"num_conversion_events_cardinality_sum_d095f14b,\"num_associated_deals\"]\n",
-    "properties_needed=[\"name\",\"city\",\"country\",\"industry\",\"numberofemployees\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"num_associated_deals\",\"nombre_de_points_de_contacts_en_poste\",\"nombre_de_points_de_contacts_en_poste\"]\n",
-    "company=api_client.crm.companies.basic_api.get_by_id(id,properties=properties_needed)\n",
-    "company_data=company.to_dict()\n",
-    "company_data[\"properties\"]"
+    "comp_id=7496989169\n",
+    "properties=[\"name\",\"city\",\"country\",\"industry\",\"nom_du_dirigeant\",\"prenom_du_dirigeant\",\"numberofemployees\",\"valeur_totale_des_deals\",\"valeur_totale_des_deals_ponderee\",\"num_associated_deals\",\"nombre_de_points_de_contacts_en_poste\",\"nombre_de_points_de_contacts_en_poste\"]\n",
+    "def comp_info(comp_id,properties):\n",
+    "    company_data=api_client.crm.companies.basic_api.get_by_id(id,properties=properties).to_dict()\n",
+    "    return company_data[\"properties\"]\n",
+    "comp_info(comp_id,properties)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
