Mise en place d'une classe pour l'exlpoitation de l'API

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connection à l'API\n",
     "api_client = HubSpot(access_token=token)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -32,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +54,14 @@
     "\n",
     "    montant_deals=0\n",
     "    for id in deals_id:\n",
-    "        deal=api_client.crm.deals.basic_api.get_by_id(id,properties=[\"amount\"])\n",
-    "        deal_data=deal.to_dict()\n",
+    "        deal_data=api_client.crm.deals.basic_api.get_by_id(id,properties=[\"amount\"]).to_dict()\n",
     "        montant_deals+=float(deal_data[\"properties\"][\"amount\"])\n",
     "    return montant_deals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,23 +109,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deal 7280660186 updated\n"
-     ]
-    }
-   ],
-   "source": [
-    "update_deal(7280660186,250000)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -209,33 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'city': 'Grenoble',\n",
-       " 'country': 'France',\n",
-       " 'createdate': '2023-04-28T09:53:40.624Z',\n",
-       " 'hs_lastmodifieddate': '2023-04-30T22:07:54.510Z',\n",
-       " 'hs_object_id': '7496989169',\n",
-       " 'industry': 'INFORMATION_TECHNOLOGY_AND_SERVICES',\n",
-       " 'name': 'company',\n",
-       " 'nom_du_dirigeant': 'company',\n",
-       " 'nombre_de_points_de_contacts_en_poste': '8',\n",
-       " 'num_associated_deals': '3',\n",
-       " 'numberofemployees': '20',\n",
-       " 'prenom_du_dirigeant': 'owner',\n",
-       " 'valeur_totale_des_deals': '915098.0',\n",
-       " 'valeur_totale_des_deals_ponderee': '363588.2'}"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Récupération des infos de l'entreprise\n",
     "\n",
@@ -246,17 +211,8 @@
     "                                                                             \"valeur_totale_des_deals_ponderee\",\"num_associated_deals\",\n",
     "                                                                             \"nombre_de_points_de_contacts_en_poste\",\n",
     "                                                                             \"nombre_de_points_de_contacts_en_poste\"]).to_dict()\n",
-    "    return company_data[\"properties\"]\n",
-    "\n",
-    "comp_info()"
+    "    return company_data[\"properties\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
