--- a/mainCrmApi.ipynb
+++ b/mainCrmApi.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "513588.2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "7"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,19 +124,19 @@
        "['Abd', 'TDG']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Propriétaire actuel\n",
-    "api.update_owner()"
+    "api.get_owner()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "{'city': 'Grenoble',\n",
        " 'country': 'France',\n",
        " 'createdate': '2023-04-28T09:53:40.624Z',\n",
-       " 'hs_lastmodifieddate': '2023-05-01T00:05:18.429Z',\n",
+       " 'hs_lastmodifieddate': '2023-05-01T00:21:04.684Z',\n",
        " 'hs_object_id': '7496989169',\n",
        " 'industry': 'INFORMATION_TECHNOLOGY_AND_SERVICES',\n",
        " 'name': 'ABD Labs',\n",
@@ -176,7 +176,7 @@
        " 'valeur_totale_des_deals_ponderee': '513588.2'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
