--- a/mainCrmApi.ipynb
+++ b/mainCrmApi.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# Token d'accès à l'API\n",
-    "token=\"pat-eu1-52e0d25c-7a77-4128-bf28-4787e96528bf\""
+    "token=\"\""
    ]
   },
   {
