--- a/main.ipynb
+++ b/main.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token=\"pat-eu1-52e0d25c-7a77-4128-bf28-4787e96528bf\"\n",
+    "token=\"\"\n",
     "api_client = HubSpot(access_token=token)"
    ]
   },
